address sonar issues
Signed-off-by: Andre Dietisheim <adietish@redhat.com>